fix: Change base endpoint
