# docs/swagger.yaml
@@ -78,163 +78,6 @@ info:
   title: Synapsis Online Store API
   version: "1.0"
 paths:
-  /api/v1/carts:
-    get:
-      consumes:
-      - application/json
-      description: Listing all of products that customer have been add.
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/controller.CartResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/controller.Response'
-      security:
-      - Authorization: []
-      summary: Find existing cart.
-      tags:
-      - Shopping Cart
-    post:
-      consumes:
-      - application/json
-      description: Add Cart using JSON
-      parameters:
-      - description: add cart
-        in: body
-        name: cart
-        required: true
-        schema:
-          $ref: '#/definitions/controller.CreateCartRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/controller.CartResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/controller.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/controller.Response'
-      summary: Add product item into cart
-      tags:
-      - Shopping Cart
-  /api/v1/carts/{cart_id}:
-    delete:
-      description: Delete selected cart item by id.
-      parameters:
-      - description: Cart ID
-        in: path
-        name: cart_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/controller.CartResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/controller.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/controller.Response'
-      security:
-      - Authorization: []
-      summary: Delete existing cart.
-      tags:
-      - Shopping Cart
-  /api/v1/categories:
-    get:
-      description: Listing all of categories product.
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/db.Category'
-            type: array
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/controller.Response'
-      summary: Get product categories
-      tags:
-      - Product Category
-    post:
-      consumes:
-      - application/json
-      description: Adding category for product
-      parameters:
-      - description: add category
-        in: body
-        name: category
-        required: true
-        schema:
-          $ref: '#/definitions/controller.CreateCategoryRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/db.Category'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/controller.Response'
-      summary: Add category product data
-      tags:
-      - Product Category
-  /api/v1/login:
-    post:
-      consumes:
-      - application/json
-      description: Authorize customer and returning token.
-      parameters:
-      - description: check customer
-        in: body
-        name: login
-        required: true
-        schema:
-          $ref: '#/definitions/controller.LoginRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/controller.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/controller.Response'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/controller.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/controller.Response'
-      summary: Check and authorize customer.
-      tags:
-      - Customer
   /api/v1/products:
     get:
       consumes:
@@ -289,7 +132,164 @@ paths:
       summary: Add new product data
       tags:
       - Product
-  /api/v1/register:
+  /carts:
+    get:
+      consumes:
+      - application/json
+      description: Listing all of products that customer have been add.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.CartResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/controller.Response'
+      security:
+      - Authorization: []
+      summary: Find existing cart.
+      tags:
+      - Shopping Cart
+    post:
+      consumes:
+      - application/json
+      description: Add Cart using JSON
+      parameters:
+      - description: add cart
+        in: body
+        name: cart
+        required: true
+        schema:
+          $ref: '#/definitions/controller.CreateCartRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/controller.CartResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/controller.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.Response'
+      summary: Add product item into cart
+      tags:
+      - Shopping Cart
+  /carts/{cart_id}:
+    delete:
+      description: Delete selected cart item by id.
+      parameters:
+      - description: Cart ID
+        in: path
+        name: cart_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.CartResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/controller.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.Response'
+      security:
+      - Authorization: []
+      summary: Delete existing cart.
+      tags:
+      - Shopping Cart
+  /categories:
+    get:
+      description: Listing all of categories product.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.Category'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controller.Response'
+      summary: Get product categories
+      tags:
+      - Product Category
+    post:
+      consumes:
+      - application/json
+      description: Adding category for product
+      parameters:
+      - description: add category
+        in: body
+        name: category
+        required: true
+        schema:
+          $ref: '#/definitions/controller.CreateCategoryRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/db.Category'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.Response'
+      summary: Add category product data
+      tags:
+      - Product Category
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: Authorize customer and returning token.
+      parameters:
+      - description: check customer
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/controller.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controller.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.Response'
+      summary: Check and authorize customer.
+      tags:
+      - Customer
+  /register:
     post:
       consumes:
       - application/json
